--- a/client/src/components/layout/countdown.css
+++ b/client/src/components/layout/countdown.css
@@ -12,13 +12,13 @@
 }
 
 .countdown-item {
-  font-size: 50px;
+  font-size: 200px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
   line-height: 30px;
-  margin: 10px;
+  margin: 50px;
   padding-top: 10px;
   position: relative;
   width: 150px;
@@ -26,7 +26,7 @@
 }
 
 .countdown-item span {
-  font-size: 15px;
+  font-size: 30px;
   font-weight: 600;
   text-transform: uppercase;
 }
