--- a/client/public/css/new-age.css
+++ b/client/public/css/new-age.css
@@ -238,52 +238,36 @@ section.missions .badges .badge-link img {
     font-size: 70px;
   }
 }
+section.rockets {
+  background-color: black;
+}
 
-section.features .section-heading {
+section.rockets .section-heading {
   margin-bottom: 100px;
 }
 
-section.features .section-heading h2 {
+section.rockets .section-heading h2 {
   margin-top: 0;
 }
 
-section.features .section-heading p {
+section.rockets .section-heading p {
   margin-bottom: 0;
 }
 
-section.features .device-container,
-section.features .feature-item {
+section.rockets .device-container,
+section.rockets .feature-item {
   max-width: 325px;
   margin: 0 auto;
 }
 
-section.features .device-container {
+section.rockets .device-container {
   margin-bottom: 100px;
 }
 
 @media (min-width: 992px) {
-  section.features .device-container {
+  section.rockets .device-container {
     margin-bottom: 0;
   }
-}
-
-section.features .feature-item {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
-}
-
-section.features .feature-item h3 {
-  font-size: 30px;
-}
-
-section.features .feature-item i {
-  font-size: 80px;
-  display: block;
-  margin-bottom: 15px;
-  background: linear-gradient(to left, #7b4397, #dc2430);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 section.cta {
