--- a/client/public/css/new-age.css
+++ b/client/public/css/new-age.css
@@ -206,6 +206,7 @@ header.masthead .device-container .screen img {
 section.missions {
   position: relative;
   padding: 150px 0;
+  background-color: black;
 }
 
 section.missions h2 {
@@ -242,13 +243,25 @@ section.rockets {
   background-color: black;
 }
 
+.titlerockets {
+  position: absolute;
+  margin-left: 25em;
+}
+
 .falcon1 {
-  margin-top: 400px;
+  margin-top: 690px;
+}
+
+.falcon9 {
+  margin-top: 290px;
+}
+
+.falconh {
+  margin-top: 290px;
 }
 
 .starships {
-  position: absolute;
-  bottom: 0;
+  position: relative;
 }
 
 section.rockets .section-heading {
@@ -433,4 +446,79 @@ footer ul li a.active {
 .btn-xl {
   font-size: 11px;
   padding: 15px 45px;
+}
+
+h1 {
+  font-size: 30px;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 15px;
+}
+table {
+  width: 100%;
+  table-layout: fixed;
+}
+.tbl-header {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.tbl-content {
+  height: 300px;
+  overflow-x: auto;
+  margin-top: 0px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+th {
+  padding: 20px 15px;
+  text-align: left;
+  font-weight: 500;
+  font-size: 12px;
+  color: #fff;
+  text-transform: uppercase;
+}
+td {
+  padding: 15px;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: 300;
+  font-size: 12px;
+  color: #fff;
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+.made-with-love {
+  margin-top: 40px;
+  padding: 10px;
+  clear: left;
+  text-align: center;
+  font-size: 10px;
+  font-family: arial;
+  color: #fff;
+}
+.made-with-love i {
+  font-style: normal;
+  color: #f50057;
+  font-size: 14px;
+  position: relative;
+  top: 2px;
+}
+.made-with-love a {
+  color: #fff;
+  text-decoration: none;
+}
+.made-with-love a:hover {
+  text-decoration: underline;
+}
+
+/* for custom scrollbar for webkit browser*/
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
